# tone

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  event.rs  main.rs
src/one/: auth.rs  client.rs  mod.rs  xmlrpc.rs
src/resource/: fetcher.rs  mod.rs  registry.rs  sdk_dispatch.rs
src/resources/: common.json  compute.json  network.json  storage.json  system.json
src/ui/: command_box.rs  dialog.rs  header.rs  help.rs  mod.rs  splash.rs
