[package]
name = "tone"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for OpenNebula - navigate, observe, and manage OpenNebula resources"
license = "MIT"
repository = "https://github.com/mnicolet/tone"
readme = "README.md"
keywords = ["opennebula", "tui", "terminal", "cloud", "infrastructure"]
categories = ["command-line-utilities", "development-tools"]
authors = ["mnicolet"]

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# HTTP client (using rustls to avoid OpenSSL cross-compilation issues)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2.5"
urlencoding = "2.1"

# XML-RPC for OpenNebula API
quick-xml = { version = "0.39", features = ["serialize"] }
base64 = "0.22"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utils
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Security
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
dirs = "6.0"
